# just_test

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  alice.just  bob.just  dep_test.just  hello.just  justfile  justfile2  load_env.just  mise.toml  run_uv.just  say_name.just
src/: config.rs  main.rs
tests/: integration_test.rs
